# offramp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: hero.html  offramp.tape  screens.tape
demo/remotion/: .gitignore  package-lock.json  package.json
demo/remotion/src/: OfframpDemo.tsx  Root.tsx
offramp/: __init__.py  cli.py  optimize.py  policy.py  prices.py  recommend.py  replay.py  report.py  usage.py
offramp/router/: __init__.py  providers.py  shim.py  translate.py
sample/: replay_prompts.json  usage_sample.json
tests/: test_recommend.py  test_router.py
